--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="index.css">
     <link rel="icon" href="img/sci.png" />
   </head>
 
@@ -30,6 +31,7 @@
     <main class='py-5 my-5'>
       <div class="text-center">
         <h1>Welcome My Site!</h1>
+        <img src="img/hello.png">
       </div>
     </main>
 
