--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="sandbox" />
     <meta name="author" content="dongglee" />
+    <meta property="og:description" content="안녕하세요"/>
 
     <title>Hello Site!</title>
     <link
