--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="sandbox" />
     <meta name="author" content="dongglee" />
     <meta property="og:description" content="안녕하세요"/>
+    <link rel="stylesheet" href="index.css">
 
     <title>Hello Site!</title>
     <link
@@ -23,20 +24,21 @@
   </head>
 
   <body role="document">
-    <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark justify-content-between">
+    <header class="fixed-top">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
         <span class="navbar-text"><h3 class="text-white">Hello!</h3></span>
         <a class="navbar-brand" href="#">Top</a>
       </nav>
     </header>
-    <main class='py-5 my-5'>
+
+    <main class='py-5 my-5 main-content'>
       <div class="text-center">
         <h1>Welcome My Site!</h1>
         <img src="img/hello.png">
       </div>
     </main>
 
-    <footer class="jumbotron text-center">
+    <footer class="jumbotron text-center footer-content">
       <p><h2>My Sandbox</h2></p>
       <p>&copy; 2020 dongglee</p>
     </footer>
