--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" href="img/sci.png" />
   </head>
 
-  <body role="document">
+  <body class="max-width">
     <header class="fixed-top">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
         <span class="navbar-text"><h3 class="text-white">Hello!</h3></span>
@@ -34,11 +34,11 @@
     <main class='py-5 my-5 main-content'>
       <div class="text-center">
         <h1>Welcome My Site!</h1>
-        <img src="img/hello.png">
+        <img src="img/hello.png" class='img-size'>
       </div>
     </main>
 
-    <footer class="jumbotron text-center footer-content">
+    <footer class="jumbotron text-center footer-content max-width">
       <p><h2>My Sandbox</h2></p>
       <p>&copy; 2020 dongglee</p>
     </footer>
