--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" href="img/sci.png" />
   </head>
 
-  <body class="max-width">
+  <body class="max-width non-xscroll">
     <header class="fixed-top">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
         <span class="navbar-text"><h3 class="text-white">Hello!</h3></span>
@@ -40,7 +40,7 @@
 
     <footer class="jumbotron text-center footer-content max-width">
       <p><h2>My Sandbox</h2></p>
-      <p>&copy; 2020 dongglee</p>
+      <p>&copy; 2020 dongglee &amp; murry</p>
     </footer>
   </body>
 </html>
