--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="icon" href="img/sci.png" />
   </head>
 
-  <body class="max-width non-xscroll">
+  <body>
     <header class="fixed-top">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark justify-content-between">
         <span class="navbar-text"><h3 class="text-white">Hello!</h3></span>
@@ -31,14 +31,14 @@
       </nav>
     </header>
 
-    <main class='py-5 my-5 main-content'>
+    <main class='py-5 my-5 container-fluid'>
       <div class="text-center">
         <h1>Welcome My Site!</h1>
         <img src="img/hello.png" class='img-size'>
       </div>
     </main>
 
-    <footer class="jumbotron text-center footer-content max-width">
+    <footer class="jumbotron text-center navbar-fixed-bottom my-0 container-fluid">
       <p><h2>My Sandbox</h2></p>
       <p>&copy; 2020 dongglee &amp; murry</p>
     </footer>
