--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0037)http://bootstrapk.com/examples/theme/ -->
 <html lang="kr">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -11,6 +10,8 @@
     <meta name="author" content="dongglee" />
     <meta property="og:description" content="안녕하세요!"/>
     <meta property="og:type" content='website'>
+    <meta property="og:image" content="img/H.jpg">
+
     <link rel="stylesheet" href="index.css">
 
     <title>Hello Site!</title>
