--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="sandbox" />
     <meta name="author" content="dongglee" />
     <meta property="og:description" content="안녕하세요!"/>
-    <meta property="og:type" content='website'>
-    <meta property="og:image" content="img/H.jpg">
+    <meta property="og:type" content='website'/>
+    <meta property="og:image" content="img/H.jpg"/>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css"/>
 
     <title>Hello Site!</title>
     <link
@@ -21,7 +21,6 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="index.css">
     <link rel="icon" href="img/sci.png" />
   </head>
 
