--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
     <main class='py-5 my-5 container-fluid'>
       <div class="text-center">
         <h1>Welcome My Site!</h1>
-        <img src="img/hello.png" class='img-size'>
+        <div class='my-5'>
+          <img src="img/hello.png" class='img-size'>
+        </div>
+        <h2><a href='raycasting/index.html'>Go to raycating!</a></h2>
       </div>
     </main>
 
